Code clean up and re-packaging properly.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
 [metadata]
-name = django_models2puml
-version = 0.1
+name = django-models2puml
+version = 0.2
 description = A Django app to generate PlantUML class diagrams of installed apps models.
-long_description = file: README.rst
-url = https://github.com/BooDy/django_models2puml
+long_description = file: README.md
+long_description_content_type=text/markdown
+url = https://github.com/BooDy/django-models2puml
 author = Abdelrahman Ghareeb
 author_email = abdelrahman@slashproc.net
 license = GPL v3.0
